# xcli

./: .gitignore  LICENSE  README.md  pyproject.toml
xcli/: api.py  cli.py  config.py  cookies.py  graphql.py  query_ids.py
