[project]
name = "xcli"
version = "0.1.0"
description = "A simple CLI tool to post to X from your terminal"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "requests-oauthlib>=1.3",
    "browser-cookie3>=0.19",
]

[project.scripts]
xcli = "xcli.cli:cli"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
